style: add meta tag to fix zoom issues on iPhone and bacakground

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -50,8 +50,8 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
+	/* height: 100%; */
 	z-index: -1;
 	background: linear-gradient(
 		90deg,
@@ -278,11 +278,10 @@ button[type="submit"]:hover,
 	display: none;
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
 	#chat {
-		margin-bottom: auto;
 	}
-}
+} */
 
 #exit-chat {
 	background-color: #ff4c4c;
